Created Error handler +Error handler todo { -differentiation of roles (in progress) -user interface }

--- a/src/main/resources/templates/admin/admin-page.html
+++ b/src/main/resources/templates/admin/admin-page.html
@@ -15,7 +15,7 @@
         <div class="card-header">Routes</div>
         <div class="card-body">
           <p class="card-text">Manage routes, schedules, and related data.</p>
-          <a href="/routes/list" class="btn btn-light">View Routes</a>
+          <a href="admin/route/list" class="btn btn-light">View Routes</a>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
         <div class="card-header">Trips</div>
         <div class="card-body">
           <p class="card-text">Manage trips, schedules, and related data.</p>
-          <a href="/trips/list" class="btn btn-light">View Trips</a>
+          <a href="admin/trip/list" class="btn btn-light">View Trips</a>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
         <div class="card-header">Drivers</div>
         <div class="card-body">
           <p class="card-text">View and manage drivers' data.</p>
-          <a href="/drivers/list" class="btn btn-light">View Drivers</a>
+          <a href="admin/driver/list" class="btn btn-light">View Drivers</a>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
         <div class="card-header">Vehicles</div>
         <div class="card-body">
           <p class="card-text">Manage your fleet of vehicles.</p>
-          <a href="/vehicles/list" class="btn btn-light">View Vehicles</a>
+          <a href="admin/vehicle/list" class="btn btn-light">View Vehicles</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
         <div class="card-header">Passenger</div>
         <div class="card-body">
           <p class="card-text">Manage passenger data and related operations.</p>
-          <a href="/passengers/list" class="btn btn-light">View Passengers</a>
+          <a href="passenger/list" class="btn btn-light">View Passengers</a>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
         <div class="card-header">Schedule</div>
         <div class="card-body">
           <p class="card-text">Manage and view schedules.</p>
-          <a href="/schedules/list" class="btn btn-light">View Schedule</a>
+          <a href="admin/schedule/list" class="btn btn-light">View Schedule</a>
         </div>
       </div>
     </div>
