--- a/src/main/resources/templates/admin/route/route-details.html
+++ b/src/main/resources/templates/admin/route/route-details.html
@@ -55,7 +55,7 @@
         <p th:text="${route.description}"></p>
       </div>
   </div>
-  <a th:href="@{'/routes/list'}" class="btn btn-secondary btn-block">Назад</a>
+  <a th:href="@{'/admin/route/list'}" class="btn btn-secondary btn-block">Назад</a>
 </div>
 </body>
 </html>
