--- a/src/main/resources/templates/admin/vehicle/vehicle-details.html
+++ b/src/main/resources/templates/admin/vehicle/vehicle-details.html
@@ -24,7 +24,7 @@
     <p th:text="${vehicle.capacity}"></p>
   </div>
 
-  <a th:href="@{'/vehicles/list'}" class="btn btn-secondary">Назад</a>
+  <a th:href="@{'/admin/vehicle/list'}" class="btn btn-secondary">Назад</a>
 </div>
 </body>
 </html>
