--- a/src/main/resources/templates/admin/driver/driver-edit.html
+++ b/src/main/resources/templates/admin/driver/driver-edit.html
@@ -2,14 +2,43 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Добавить водителя</title>
+  <title>Редактировать водителя</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .container {
+      max-width: 1200px;
+      margin-top: 30px;
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    h1, h3 {
+      color: #343a40;
+      text-align: center;
+    }
+    .form-group label {
+      font-weight: bold;
+    }
+    .text-danger {
+      color: red;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
-  <h1>Добавить нового водителя</h1>
+  <h1>Редактировать водителя</h1>
 
-  <form th:action="@{/templates/driver/create}" th:object="${drivers}" method="post">
+  <div th:if="${successMessage}" class="alert alert-success">
+    <p th:text="${successMessage}"></p>
+  </div>
+
+  <form th:action="@{'/admin/driver/edit'}" th:object="${drivers}" method="post">
+    <input type="hidden" th:field="*{id}"/>
+
     <div class="form-group">
       <label for="firstName">Имя</label>
       <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required>
@@ -34,8 +63,8 @@
       </div>
     </div>
 
-    <button type="submit" class="btn btn-success">Сохранить</button>
-    <a th:href="@{'/drivers/list'}" class="btn btn-secondary">Назад</a>
+    <button type="submit" class="btn btn-success btn-block">Сохранить</button>
+    <a th:href="@{'/admin/driver/list'}" class="btn btn-secondary btn-block">Назад</a>
   </form>
 </div>
 </body>
