--- a/src/main/resources/templates/admin/driver/driver-list.html
+++ b/src/main/resources/templates/admin/driver/driver-list.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Список студентов</title>
+    <title>Список водителей</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
@@ -11,9 +10,9 @@
 
     <a th:href="@{'/'}" class="btn btn-secondary mb-3">Вернуться на главную</a>
 
-    <a th:href="@{'/drivers/create'}" class="btn btn-primary mb-3">Добавить водителя</a>
+    <a th:href="@{'/admin/driver/create'}" class="btn btn-primary mb-3">Добавить водителя</a>
 
-    <form th:action="@{/templates/driver/search}" method="get">
+    <form th:action="@{'/admin/driver/search'}" method="get">
         <input type="text" name="keyword" placeholder="Введите фамилию, имя или водительское удостоверение" class="form-control"/>
         <button type="submit" class="btn btn-primary">Поиск</button>
     </form>
@@ -39,13 +38,13 @@
             <td th:text="${driver.firstName}"></td>
             <td th:text="${driver.licenseNumber}"></td>
             <td>
-                <a th:href="@{'/drivers/details/' + ${driver.id}}" class="btn btn-info">Подробнее</a>
+                <a th:href="@{'/admin/driver/details/' + ${driver.id}}" class="btn btn-info">Подробнее</a>
             </td>
             <td>
-                <a th:href="@{'/drivers/edit/' + ${driver.id}}" class="btn btn-secondary">Изменить</a>
+                <a th:href="@{'/admin/driver/edit/' + ${driver.id}}" class="btn btn-secondary">Изменить</a>
             </td>
             <td>
-                <a th:href="@{'/drivers/delete/' + ${driver.id}}" class="btn btn-danger">Удалить</a>
+                <a th:href="@{'/admin/driver/delete/' + ${driver.id}}" class="btn btn-danger">Удалить</a>
             </td>
         </tr>
         </tbody>
