--- a/src/main/resources/templates/admin/route/route-create.html
+++ b/src/main/resources/templates/admin/route/route-create.html
@@ -9,7 +9,7 @@
 <div class="container">
     <h1>Добавить новый маршрут</h1>
 
-    <form th:action="@{/routes/create}" th:object="${route}" method="post">
+    <form th:action="@{'/admin/route/create'}" th:object="${route}" method="post">
         <div class="form-group">
             <label for="startLocation">Место отправления</label>
             <input type="text" class="form-control" id="startLocation" th:field="*{startLocation}" required>
@@ -32,7 +32,7 @@
         </div>
 
         <button type="submit" class="btn btn-success">Сохранить</button>
-        <a th:href="@{/routes/list}" class="btn btn-secondary">Назад</a>
+        <a th:href="@{'/admin/route/list'}" class="btn btn-secondary">Назад</a>
     </form>
 </div>
 </body>
