--- a/src/main/resources/templates/admin/vehicle/vehicle-edit.html
+++ b/src/main/resources/templates/admin/vehicle/vehicle-edit.html
@@ -2,14 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Добавить ТС</title>
+  <title>Редактировать ТС</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
-  <h1>Добавить транспортное средство</h1>
+  <h1>Редактировать транспортное средство</h1>
 
-  <form th:action="@{/vehicles/create}" th:object="${vehicle}" method="post">
+  <form th:action="@{'/admin/vehicle/edit'}" th:object="${vehicle}" method="post">
+    <input type="hidden" th:field="*{id}"/>
+
     <div class="form-group">
       <label for="vehicleType">Тип ТС</label>
       <input type="text" class="form-control" id="vehicleType" th:field="*{vehicleType}" required>
@@ -35,7 +37,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Сохранить</button>
-    <a th:href="@{'/vehicles/list'}" class="btn btn-secondary">Назад</a>
+    <a th:href="@{'/admin/vehicle/list'}" class="btn btn-secondary">Назад</a>
   </form>
 </div>
 </body>
