--- a/src/main/resources/templates/admin/vehicle/vehicle-list.html
+++ b/src/main/resources/templates/admin/vehicle/vehicle-list.html
@@ -11,9 +11,9 @@
 
   <a th:href="@{'/'}" class="btn btn-secondary mb-3">Вернуться на главную</a>
 
-  <a th:href="@{'/vehicles/create'}" class="btn btn-primary mb-3">Добавить ТС</a>
+  <a th:href="@{'/admin/vehicle/create'}" class="btn btn-primary mb-3">Добавить ТС</a>
 
-  <form th:action="@{/vehicles/search}" method="get">
+  <form th:action="@{'/admin/vehicle/search'}" method="get">
     <input type="text" name="keyword" placeholder="Введите тип или номер ТС" class="form-control mb-3"/>
     <button type="submit" class="btn btn-primary">Поиск</button>
   </form>
@@ -36,9 +36,9 @@
       <td th:text="${vehicle.vehicleType}"></td>
       <td th:text="${vehicle.vehicleNumber}"></td>
       <td th:text="${vehicle.capacity}"></td>
-      <td><a th:href="@{'/vehicles/details/' + ${vehicle.id}}" class="btn btn-info">Подробнее</a></td>
-      <td><a th:href="@{'/vehicles/edit/' + ${vehicle.id}}" class="btn btn-secondary">Изменить</a></td>
-      <td><a th:href="@{'/vehicles/delete/' + ${vehicle.id}}" class="btn btn-danger">Удалить</a></td>
+      <td><a th:href="@{'/admin/vehicle/details/' + ${vehicle.id}}" class="btn btn-info">Подробнее</a></td>
+      <td><a th:href="@{'/admin/vehicle/edit/' + ${vehicle.id}}" class="btn btn-secondary">Изменить</a></td>
+      <td><a th:href="@{'/admin/vehicle/delete/' + ${vehicle.id}}" class="btn btn-danger">Удалить</a></td>
     </tr>
     </tbody>
   </table>
