Created trip search for user +differentiation of roles todo { -user interface (in progress) -ticket purchasing logic (in progress) }

--- a/src/main/resources/templates/admin/schedule/schedule-details.html
+++ b/src/main/resources/templates/admin/schedule/schedule-details.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <a th:href="@{'/schedules/list'}" class="btn btn-secondary mt-3">Назад</a>
+  <a th:href="@{'/admin/schedule/list'}" class="btn btn-secondary mt-3">Назад</a>
 </div>
 </body>
 </html>
