--- a/src/main/resources/templates/admin/schedule/schedule-create.html
+++ b/src/main/resources/templates/admin/schedule/schedule-create.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
   <h1>Добавить расписание</h1>
-  <form th:action="@{/schedules/create}" th:object="${schedule}" method="post">
+  <form th:action="@{'/admin/schedule/create'}" th:object="${schedule}" method="post">
 
     <div class="form-group">
       <label for="driver">Водитель</label>
@@ -41,7 +41,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Сохранить</button>
-    <a th:href="@{'/schedules/list'}" class="btn btn-secondary">Назад</a>
+    <a th:href="@{'/admin/schedule/list'}" class="btn btn-secondary">Назад</a>
   </form>
 </div>
 </body>
