--- a/src/main/resources/templates/admin/schedule/schedule-edit.html
+++ b/src/main/resources/templates/admin/schedule/schedule-edit.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <h1>Редактировать расписание</h1>
-    <form th:action="@{/schedules/edit}" th:object="${schedule}" method="post">
+    <form th:action="@{'/admin/schedule/edit'}" th:object="${schedule}" method="post">
         <input type="hidden" th:field="*{id}"/>
 
         <div class="form-group">
@@ -40,7 +40,7 @@
         </div>
 
         <button type="submit" class="btn btn-success">Сохранить</button>
-        <a th:href="@{'/schedules/list'}" class="btn btn-secondary">Назад</a>
+        <a th:href="@{'/admin/schedule/list'}" class="btn btn-secondary">Назад</a>
     </form>
 </div>
 </body>
