--- a/src/main/resources/templates/admin/trip/trip-create.html
+++ b/src/main/resources/templates/admin/trip/trip-create.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
   <h1>Добавить новую поездку</h1>
-  <form th:action="@{/trips/create}" th:object="${trip}" method="post">
+  <form th:action="@{'/admin/trip/create'}" th:object="${trip}" method="post">
     <div class="form-group">
       <label for="tripNumber">Номер поездки</label>
       <input type="text" class="form-control" id="tripNumber" th:field="*{tripNumber}" required>
@@ -62,7 +62,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Сохранить</button>
-    <a th:href="@{'/trips/list'}" class="btn btn-secondary">Назад</a>
+    <a th:href="@{'/admin/trip/list'}" class="btn btn-secondary">Назад</a>
   </form>
 </div>
 </body>
