--- a/src/main/resources/templates/admin/trip/trip-details.html
+++ b/src/main/resources/templates/admin/trip/trip-details.html
@@ -66,7 +66,7 @@
     <p th:text="${trip.route.startLocation} + ' - ' + ${trip.route.endLocation}"></p>
   </div>
 
-  <a th:href="@{'/trips/list'}" class="btn btn-secondary btn-block">Назад</a>
+  <a th:href="@{'/admin/trip/list'}" class="btn btn-secondary btn-block">Назад</a>
 </div>
 </body>
 </html>
