--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -4,49 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Профиль пользователя</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    .profile-container {
-      max-width: 400px;
-      margin: auto;
-      padding: 20px;
-      background-color: #ffffff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      text-align: center;
-    }
-    .profile-info {
-      margin-bottom: 10px;
-    }
-    .profile-info strong {
-      display: inline-block;
-      width: 100px;
-    }
-    .logout-button {
-      display: block;
-      width: 100%;
-      background-color: #e74c3c;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      text-align: center;
-      cursor: pointer;
-      font-size: 16px;
-      margin-top: 20px;
-    }
-    .logout-button:hover {
-      background-color: #c0392b;
-    }
-  </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" th:href="@{'/css/user-profile.css'}">
 </head>
 <body>
 <div class="profile-container">
@@ -56,12 +15,13 @@
     <p><strong>Почта:</strong> <span th:text="${user.userEmail}"></span></p>
   </div>
   <button class="logout-button" onclick="logout()">Выйти</button>
+  <a th:href="@{'/'}" class="back-button">Назад</a>
 </div>
-</body>
-</html>
 
 <script>
   function logout() {
     window.location.href = "/logout";
   }
 </script>
+</body>
+</html>
