--- a/src/main/resources/static/css/user-page.css
+++ b/src/main/resources/static/css/user-page.css
@@ -211,6 +211,30 @@ header h1 {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+    background-color: #e9e9e9;
+}
+.autocomplete-active {
+    background-color: DodgerBlue !important;
+    color: #ffffff;
+}
+
 footer {
     background-color: #7d7b7b;
     color: white;
