--- a/src/main/resources/static/css/user-profile.css
+++ b/src/main/resources/static/css/user-profile.css
@@ -5,7 +5,7 @@ body {
     background-color: #f5f5f5;
 }
 .profile-container {
-    max-width: 400px;
+    max-width: 600px;
     margin: auto;
     padding: 20px;
     background-color: #ffffff;
@@ -62,4 +62,18 @@ h1 {
 }
 .back-button:hover {
     background-color: #2980b9;
+}
+
+.tickets-container {
+    margin-top: 20px;
+}
+.ticket-item {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+.ticket-item p {
+    margin: 5px 0;
 }
