--- a/src/main/resources/templates/admin/vehicle/vehicle-create.html
+++ b/src/main/resources/templates/admin/vehicle/vehicle-create.html
@@ -12,15 +12,21 @@
   <form th:action="@{'/admin/vehicle/create'}" th:object="${vehicle}" method="post">
     <div class="form-group">
       <label for="vehicleType">Тип ТС</label>
-      <input type="text" class="form-control" id="vehicleType" th:field="*{vehicleType}" required>
+      <select class="form-control" id="vehicleType" th:field="*{vehicleType}">
+        <option value="" th:selected="${vehicle.vehicleType == null}">Выберите тип ТС</option>
+        <option value="Автобус" th:selected="${vehicle.vehicleType == 'Автобус'}">Автобус</option>
+        <option value="Туристический" th:selected="${vehicle.vehicleType == 'Грузовик'}">Туристический</option>
+        <option value="Микроавтобус" th:selected="${vehicle.vehicleType == 'Микроавтобус'}">Микроавтобус</option>
+      </select>
       <div th:if="${#fields.hasErrors('vehicleType')}" class="text-danger">
         <span th:errors="*{vehicleType}"></span>
       </div>
     </div>
 
+
     <div class="form-group">
       <label for="vehicleNumber">Номер ТС</label>
-      <input type="text" class="form-control" id="vehicleNumber" th:field="*{vehicleNumber}" required>
+      <input type="text" class="form-control" id="vehicleNumber" th:field="*{vehicleNumber}">
       <div th:if="${#fields.hasErrors('vehicleNumber')}" class="text-danger">
         <span th:errors="*{vehicleNumber}"></span>
       </div>
@@ -28,11 +34,12 @@
 
     <div class="form-group">
       <label for="capacity">Вместимость</label>
-      <input type="number" class="form-control" id="capacity" th:field="*{capacity}" required>
+      <input type="number" class="form-control" id="capacity" th:field="*{capacity}">
       <div th:if="${#fields.hasErrors('capacity')}" class="text-danger">
         <span th:errors="*{capacity}"></span>
       </div>
     </div>
+
 
     <button type="submit" class="btn btn-success">Сохранить</button>
     <a th:href="@{'/admin/vehicle/list'}" class="btn btn-secondary">Назад</a>
