--- a/src/main/resources/templates/admin/driver/driver-list.html
+++ b/src/main/resources/templates/admin/driver/driver-list.html
@@ -2,14 +2,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Список водителей</title>
+    <link rel="stylesheet" href="/css/main-list.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+        <h1>Bus Company Admin Panel</h1>
+        <button class="btn btn-danger logout-btn" onclick="logout()">Выйти</button>
+    </div>
+</header>
+
 <div class="container">
     <h1>Список водителей</h1>
-
     <a th:href="@{'/'}" class="btn btn-secondary mb-3">Вернуться на главную</a>
-
     <a th:href="@{'/admin/driver/create'}" class="btn btn-primary mb-3">Добавить водителя</a>
 
     <form th:action="@{'/admin/driver/search'}" method="get">
@@ -50,5 +56,10 @@
         </tbody>
     </table>
 </div>
+<script>
+    function logout() {
+        window.location.href = "/logout";
+    }
+</script>
 </body>
 </html>
