--- a/src/main/resources/templates/admin/route/route-list.html
+++ b/src/main/resources/templates/admin/route/route-list.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Список маршрутов</title>
+  <link rel="stylesheet" href="/css/main-list.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<header class="header">
+  <div class="container d-flex justify-content-between align-items-center">
+    <h1>Bus Company Admin Panel</h1>
+    <button class="btn btn-danger logout-btn" onclick="logout()">Выйти</button>
+  </div>
+</header>
+
 <div class="container">
   <h1>Список маршрутов</h1>
-
   <a th:href="@{'/'}" class="btn btn-secondary mb-3">Вернуться на главную</a>
-
   <a th:href="@{'/admin/route/create'}" class="btn btn-primary mb-3">Добавить маршрут</a>
 
   <form th:action="@{'/admin/route/search'}" method="get">
@@ -51,5 +57,10 @@
     </tbody>
   </table>
 </div>
+<script>
+  function logout() {
+    window.location.href = "/logout";
+  }
+</script>
 </body>
 </html>
