--- a/src/main/resources/templates/admin/schedule/schedule-list.html
+++ b/src/main/resources/templates/admin/schedule/schedule-list.html
@@ -2,12 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Список расписаний</title>
+    <link rel="stylesheet" href="/css/main-list.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+        <h1>Bus Company Admin Panel</h1>
+        <button class="btn btn-danger logout-btn" onclick="logout()">Выйти</button>
+    </div>
+</header>
+
 <div class="container">
     <h1>Список расписаний</h1>
-
     <a th:href="@{'/'}" class="btn btn-secondary mb-3">Вернуться на главную</a>
     <a th:href="@{'/admin/schedule/create'}" class="btn btn-primary mb-3">Добавить расписание</a>
 
@@ -28,7 +35,7 @@
             <td th:text="${schedule.trip.tripNumber}"></td>
             <td th:text="${schedule.trip.route.startLocation} + ' - ' + ${schedule.trip.route.endLocation}"></td>
             <td th:text="${schedule.vehicle.vehicleNumber}"></td>
-            <td th:text="${schedule.driver.firstName} + ' ' + ${schedule.driver.lastName}"></td>
+            <td th:text="${schedule.driver != null ? schedule.driver.firstName + ' ' + schedule.driver.lastName : 'No Driver Assigned'}"></td>
 
             <td>
                 <a th:href="@{'/admin/schedule/details/' + ${schedule.id}}" class="btn btn-secondary">Детали</a>
@@ -38,5 +45,10 @@
         </tbody>
     </table>
 </div>
+<script>
+    function logout() {
+        window.location.href = "/logout";
+    }
+</script>
 </body>
 </html>
