--- a/src/main/resources/templates/admin/trip/trip-create.html
+++ b/src/main/resources/templates/admin/trip/trip-create.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="form-group">
-      <label for="vehicle">Vehicle</label>
+      <label for="vehicle">Тип ТС</label>
       <select class="form-control" id="vehicle" th:field="*{vehicle}" required>
         <option th:each="vehicle : ${vehicles}"
                 th:value="${vehicle.id}"
@@ -44,7 +44,7 @@
     </div>
 
     <div class="form-group">
-      <label for="route">Route</label>
+      <label for="route">Маршрут</label>
       <select class="form-control" id="route" th:field="*{route}" required>
         <option th:each="route : ${routes}"
                 th:value="${route.id}"
@@ -53,7 +53,7 @@
     </div>
 
     <div class="form-group">
-      <label for="driver">Driver</label>
+      <label for="driver">Водитель</label>
       <select class="form-control" id="driver" th:field="*{driver}" required>
         <option th:each="driver : ${drivers}"
                 th:value="${driver.id}"
