--- a/src/main/resources/templates/admin/trip/trip-list.html
+++ b/src/main/resources/templates/admin/trip/trip-list.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Trips List</title>
+  <link rel="stylesheet" href="/css/main-list.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<header class="header">
+  <div class="container d-flex justify-content-between align-items-center">
+    <h1>Bus Company Admin Panel</h1>
+    <button class="btn btn-danger logout-btn" onclick="logout()">Выйти</button>
+  </div>
+</header>
+
 <div class="container">
   <h1>Список поездок</h1>
 
@@ -30,9 +38,7 @@
       <th>Дата и время прибытия</th>
       <th>Транспорт</th>
       <th>Маршрут</th>
-
       <th>Количество свободных мест</th>
-
       <th></th>
       <th></th>
       <th></th>
@@ -43,8 +49,8 @@
       <td th:text="${trip.tripNumber}"></td>
       <td th:text="${trip.departureLocation}"></td>
       <td th:text="${trip.destinationLocation}"></td>
-      <td th:text="${trip.departureDatetime}"></td>
-      <td th:text="${trip.arrivalDatetime}"></td>
+      <td th:text="${#temporals.format(trip.departureDatetime, 'dd.MM.yyyy HH:mm')}"></td>
+      <td th:text="${#temporals.format(trip.arrivalDatetime, 'dd.MM.yyyy HH:mm')}"></td>
       <td th:text="${trip.vehicle.vehicleType}"></td>
       <td th:text="${trip.route.startLocation} + ' - ' + ${trip.route.endLocation}"></td>
 
@@ -63,5 +69,10 @@
     </tbody>
   </table>
 </div>
+<script>
+  function logout() {
+    window.location.href = "/logout";
+  }
+</script>
 </body>
 </html>
