--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <header>
-    <h1 class="text-center">Welcome to Lopify</h1>
+    <h1 class="text-center">Добро пожаловать в Bus Company!</h1>
 </header>
 
 <div class="container welcome-message">
-    <h2>Welcome to the start page!</h2>
-    <a href="/login" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Login</a>
-    <a href="/register" class="btn btn-secondary"><i class="fas fa-user-plus"></i> Register</a>
+    <h2>Добро пожаловать на домашнюю страницу!</h2>
+    <a href="/login" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Авторизация</a>
+    <a href="/register" class="btn btn-secondary"><i class="fas fa-user-plus"></i> Регистрация</a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
