--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,20 +37,20 @@
 <body>
 <div class="container">
   <form th:action="@{/register}" th:object="${userRegistrationDto}" method="post" class="form-signin">
-    <h1 class="h3 mb-3 font-weight-normal">Register</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
     <div class="mb-3">
-      <label for="userLogin" class="form-label">Login:</label>
+      <label for="userLogin" class="form-label">Логин:</label>
       <input type="text" id="userLogin" th:field="*{userLogin}" class="form-control" required/>
     </div>
     <div class="mb-3">
-      <label for="userPassword" class="form-label">Password:</label>
+      <label for="userPassword" class="form-label">Пароль:</label>
       <input type="password" id="userPassword" th:field="*{userPassword}" class="form-control" required/>
     </div>
     <div class="mb-3">
       <label for="userEmail" class="form-label">Email:</label>
       <input type="email" id="userEmail" th:field="*{userEmail}" class="form-control" required/>
     </div>
-    <button type="submit" class="btn btn-primary mt-3">Register</button>
+    <button type="submit" class="btn btn-primary mt-3">Зарегестрироваться</button>
   </form>
   <div th:if="${successMessage}" class="alert alert-success mt-3" th:text="${successMessage}"></div>
   <div th:if="${errorMessage}" class="alert alert-danger mt-3" th:text="${errorMessage}"></div>
